Update Laboratory Activity 4

--- a/Laboratory Activities/Laboratory Activity 4 11-28-2024/styles.css
+++ b/Laboratory Activities/Laboratory Activity 4 11-28-2024/styles.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #FFE0B5;
+    font-family: "Inter", sans-serif;
+    color: white;
+    background-color: #697565;
+    word-wrap: break-word;
 }
 
 .container {
@@ -41,7 +45,7 @@ body {
     border: 2px solid black;
     border-radius: 10px;
     padding: 25px;
-    background-color: #FFF2D7;
+    background-color: #181C14;
 
     /* Flex */
     display: flex;
