--- a/Laboratory Activities/Laboratory Activity 4 11-28-2024/styles.css
+++ b/Laboratory Activities/Laboratory Activity 4 11-28-2024/styles.css
@@ -1,60 +1,72 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 body {
     margin: 0;
     padding: 0;
     font-family: "Inter", sans-serif;
     color: white;
-    background-color: #697565;
-    word-wrap: break-word;
+    background-color: #f3f4f6;
+    overflow: hidden;
+
+    /* Dimensions */
+    height: 100vh;
+    width: 100%;
 
     /* Flex */
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+}
+
+.particles {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 
 .container {
+    position: relative;
+    z-index: 1;
     font-size: 14px;
-
-    /* Flex */
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.container p {
-    line-height: 0;
-}
-
 .flex-container {
-    width: 100%;
-    margin-inline: 10px;
-
-    /* Flex */
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
     flex-wrap: wrap;
     gap: 10px;
+    width: 100%;
+    padding: 10px;
 }
 
 .item {
     height: 100px;
     width: 300px;
-    border: 2px solid black;
-    border-radius: 10px;
     padding: 25px;
     background-color: #181C14;
+
+    /* Border */
+    border: 2px solid black;
+    border-radius: 10px;
 
     /* Flex */
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+    text-align: center;
+}
+
+.item p {
+    margin: 4px 0;
+    line-height: 1.5;
 }
